# umi-mx-gtk-theme

./: AUTHORS  CREDITS  README.md  arc-flatabulous-theme-upgrade  arc-theme-upgrade  configure.ac  package.json
common/: Makefile.am  index.theme-dark  index.theme-darker
common/gnome-shell/3.14/: gnome-shell-dark.css  gnome-shell.css
common/gnome-shell/3.16/: gnome-shell-dark.css  gnome-shell.css
common/gnome-shell/3.18/: gnome-shell-dark.css  gnome-shell.css
common/gnome-shell/3.30/sass/: _common.scss
common/index/dark/: index.theme
common/index/darker/: index.theme
common/index/light/: index.theme
common/metacity-1/: metacity-theme-1-dark.xml  metacity-theme-1.xml  metacity-theme-2-dark.xml  metacity-theme-2.xml  metacity-theme-3.xml
common/xfwm4-dark/: close-active.xpm  close-inactive.xpm  close-prelight.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-prelight.xpm  hide-pressed.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-prelight.xpm  maximize-pressed.xpm
debian/: changelog  control  copyright
extra/: Makefile.am
